style(auth): fix logo and description overlap with image

--- a/src/app/pages/auth/login-page/login-page.component.scss
+++ b/src/app/pages/auth/login-page/login-page.component.scss
@@ -9,6 +9,9 @@
     }
     .carousel-container {
         background-color: #F7FAFC;
+        img {
+            z-index: 1;
+        }
         .circle-bg-1, .circle-bg-2, .circle-bg-3 {
             width: 75em;
             height: 75em;
